[package]
name = "event_notification_system"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rdkafka = { version = "0.36", features = ["tokio"] }
rumqttc = "0.24"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
anyhow = "1.0"
crossbeam-channel = "0.5"
openssl = { version = "0.10", features = ["vendored"] }

axum = { version = "0.8.4", features = ["json"] }
async-trait = "0.1"